...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/mpsdkSecurityCodeActivityBackground"
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:background="@color/mpsdk_background">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/mpsdkToolbar"
...
                    android:theme="@style/ToolbarTheme"
                    app:popupTheme="@style/Theme.MercadoPagoTheme.NoActionBar">

                </android.support.v7.widget.Toolbar>

                <com.mercadopago.customviews.MPTextView
                    android:id="@+id/mpsdkTimerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="14dp"
...
                            android:lines="1"
                            android:text="@string/mpsdk_security_code"
                            android:textColor="@color/mpsdk_color_new_card_text"
                            android:textSize="14dp" />

                        <com.mercadopago.customviews.MPEditText
                            android:id="@+id/mpsdkCardSecurityCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="4"
...
