...
            tools:text="@string/mpsdk_standard_error_message"
            android:layout_gravity="center_horizontal|top"
            android:textColor="@color/mpsdk_dark_font_color"
            android:textSize="16dp"/>

        <com.mercadopago.views.MPTextView
            android:id="@+id/mpsdkErrorRetry"
            android:layout_width="wrap_content"
            android:gravity="bottom|center"
            android:layout_height="wrap_content"
            android:text="@string/mpsdk_refresh_message"
            android:layout_gravity="center_horizontal|top"
            android:textSize="25dp"
...
